@@ -3,6 +3,7 @@
   display: flex;
   flex-direction: column;
 
+  --w-preview-background-color: var(--w-color-white);
   --preview-width-ratio: min(
     1,
     var(--preview-panel-width, 450) / var(--preview-device-width, 375)
@@ -32,6 +33,11 @@
     height: calc(100% / var(--preview-width-ratio));
     transform: scale(var(--preview-width-ratio));
     display: block;
+
+    &:empty {
+      // Ensure that sites without a background show with a fallback, only when iframe has loaded
+      background-color: var(--w-preview-background-color);
+    }
 
     [dir='rtl'] & {
       // Transform with the top-right physical corner as the origin since the layout is reversed.
